--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    
+    <button id="book-btn">New Book</button>
+    <div id="books-container"></div>
 <script src="script.js"></script>
 </body>
 </html>
