delete button added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
 <body>
     <button id="book-btn">New Book</button>
     <div id="books-container"></div>
+
+    <div id="book-modal">
+        <form id="modal-content">
+            <h1>Enter book details</h1>
+            <p>Title:</p>
+            <input type="text" placeholder="Title" id="title-input">
+            <p>Author:</p>
+            <input type="text" placeholder="Author" id="author-input">
+            <p>Page Count</p>
+            <input type="text" placeholder="Page count" id="pages-input">
+            <p>Read (yes/no)</p>
+            <input type="text" placeholder="Have you read it?" id="read-input">
+            <input type="Submit">
+        </form>
+    </div>
+
 <script src="script.js"></script>
 </body>
 </html>
